scripts/nullaway/original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8.txt
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/SimpleMove.java:73: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        updateEnpassantFile(pos, null);
                                 ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/SimpleMove.java:93: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        pos.setPieceAt(null, source);
                       ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/AbstractTakingMove.java:18: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Piece takenPiece = null;
	              ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/CastlingMove.java:16: error: [NullAway] initializer method does not guarantee @NonNull field rookSource (line 13) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public CastlingMove(ChessCoord source, ChessCoord target, ChessCoord rookSrc) {
           ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/CastlingMove.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
    private ChessCoord rookDest = null;
                       ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/PGNParser.java:173: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/move/impl/PawnPromotionMove.java:31: error: [NullAway] initializer method does not guarantee @NonNull field movingPawn (line 29) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PawnPromotionMove(ChessCoord source, ChessCoord target,
           ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/piece/impl/AbstractPiece.java:38: error: [NullAway] initializer method does not guarantee @NonNull field coord (line 19) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AbstractPiece(final Position pos, final PieceType pieceType,
           ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/piece/impl/AbstractPiece.java:155: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return result;
        ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields moves (line 23), activeColor (line 24), castlingAvailability (line 28) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    private DefaultPosition() {
            ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
        pieces = null;
               ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:166: error: [NullAway] dereferenced expression this.pieceSets.get(piece.getColor()) is @Nullable
        this.pieceSets.get(piece.getColor()).add(piece);
                                            ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:177: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            this.setPieceAt(null, piece.getCoord());
                            ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:178: error: [NullAway] dereferenced expression this.pieceSets.get(piece.getType()) is @Nullable
            this.pieceSets.get(piece.getType()).remove(piece);
                                               ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:192: error: [NullAway] enhanced-for expression opponentsPieces is @Nullable
        for (Piece p : opponentsPieces) {
                       ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:223: error: [NullAway] enhanced-for expression this.pieceSets.get(this.getActiveColor()) is @Nullable
        for (Piece piece : this.pieceSets.get(this.getActiveColor())) {
                                             ^
    (see http://t.uber.com/nullaway )
../original/url0980c8326f_TobiasScharnowski_Chess_tgz-pJ8-chess_StartJ8/src/chess/impl/DefaultPosition.java:252: error: [NullAway] enhanced-for expression this.pieceSets.get(color) is @Nullable
        for (Piece piece : this.pieceSets.get(color)) {
                                             ^
    (see http://t.uber.com/nullaway )
17 errors
